--- a/aboutUs.html
+++ b/aboutUs.html
@@ -28,7 +28,7 @@
         <a href="index.php" class="linksHeader">صفحه نخست</a>
         <a href="WhyWebotel.html" class="linksHeader">چرا وبوتل</a>
         <a href="#" class="linksHeader">پشتیبانی</a>
-        <a href="#" class="linksHeader">وبلاگ</a>
+        <!--<a href="#" class="linksHeader">وبلاگ</a>-->
         <a href="aboutUs.html" class="linksHeader">درباره‌ی وبوتل</a>
         <div class="menuIcon">
           <a href="#" class="fas fa-bars MIcon" id="menubutono"></a>
